--- a/src/_locales/en_US/messages.json
+++ b/src/_locales/en_US/messages.json
@@ -1,10 +1,18 @@
 {
-  "appName": {
-    "message": "Brave Wayback Machine Extension",
-    "description": "The name of this extension"
-  },
   "appDescription": {
     "message": "Reduce annoying 404 pages by automatically checking for an archived copy in the Wayback Machine.",
-    "description": "The description of this extension"
+    "description": "The description of this extension."
+  },
+  "bannerText": {
+    "message": "Sorry, that page is missing.",
+    "description": "Inform the user that the page is not available."
+  },
+  "bannerTextDescription": {
+    "message": "Do you want to check if a saved version is available on the Wayback Machine?",
+    "description": "Inform the user about the option to load the page via Wayback Machine."
+  },
+  "bannerButton": {
+    "message": "Check for saved version",
+    "description": "Text for the action button that loads an archived page whenever it is available."
   }
 }
